--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrap">
       <div class="container">
         <div class="left-aside">
-          <img src="https://steamuserimages-a.akamaihd.net/ugc/2296339440150148468/D1E7596B00EC41623A8121E5AEF8C96776B1AED3/?imw=512&imh=400&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true" alt="LOGO">
+          <img src="images/logo.png" alt="LOGO">
           <h1 align="center" style="font-size: 40px;">Худышкин Матвей Г.</h1>
           <div class="bottom-content">
             <div class="contacts">
@@ -41,7 +41,7 @@
             <p>Мне нечего говорить, тем более что-то о себе, сделал эту карточку очень быстро)</p>
             <div class="other__info">
               <div class="col-1">
-                <p><span class="bg-green">Имя:</span> Худышкин Матвей</p>
+                <p><span class="bg-green">Имя:</span> Матвей</p>
                 <p><span class="bg-green">Год рождения:</span> 19 марта 2007г.</p>
               </div>
               <div class="col-2">
